styles/main.less
/* ... */
.asset-type-imagegroup .wrap .populr-image-slider {
  width: 220px;
}

.asset-type-imagegroup .wrap .asset-title {
  padding-top: 0;
}

.columnizer-row:nth-child(odd) .wrap {
  .populr-image-slider {
    float: left;
    margin-right: unit(@gutter-width, px);  
  }
}
.columnizer-row:nth-child(odd) {
  .asset-type-imagegroup.asset-size-1 .description {
    ul, ol {
      margin-left: 260px;
    }
  }
}

.columnizer-row:nth-child(even) .wrap {
  .populr-image-slider {
    float: right;
    margin-left: unit(@gutter-width, px);  
  }
}

/* IE */
.lt-ie9 {
  .columnizer-row.odd {
    .asset-type-imagegroup.asset-size-1 .description {
      ul, ol {
        margin-left: 265px;
      }
    }
    .wrap {
      .populr-image-slider {
        float: left;
        margin-right: unit(@gutter-width, px);  
      }
    }
  }

  .columnizer-row.even .wrap {
    .populr-image-slider {
      float: right;
      margin-left: unit(@gutter-width, px);  
    }
  }
}
/* /IE */

.columnizer-row-contents-imagegroup-imagegroup-imagegroup {
  .slide {
    min-height: 165px;
    overflow: hidden;
  }
}

.columnizer-row-contents-imagegroup-imagegroup-imagegroup-imagegroup {
  .slide {
    min-height: 225px;
    overflow: hidden;
  }
}

.documents, .documents li {
  list-style: none;
  padding: 0;
  margin: 0;
  &:before {
    content: "";
    display: none;
  }
}

.documents {
   margin-top: @baseline;
}

.lt-ie9 .download-spacing { display: none; }

.asset-type-documentgroup.asset-size-2, .asset-type-documentgroup.asset-size-3 {
  .documents li {
    .file-icon(30px, 8px, @off-white);
    margin-top: @baseline / 2;
    a {
      display: inline-block;
      min-height: 30px * 1.2;
      height: auto !important;
      height: 30px * 1.2;
      line-height: 30px * 1.2;
      text-decoration: none;
    }
    .file {
      position: absolute;
    }
    .filename {
      display: inline-block;
      vertical-align: middle;
      line-height: @baseline;
      padding-left: 30px + @normal-font-size;
      text-overflow: ellipsis;
      overflow: hidden;
    }
  }
}

.asset-type-documentgroup.asset-size-2 .documents li .filename {
  width: 296px;
}

.asset-type-documentgroup.asset-size-3 .documents li .filename {
  width: 176px;
}

.asset-type-documentgroup.asset-size-1 {
  .documents li {
    background: @lighter-custom-color;
    .file-icon(40px, @normal-font-size - 3px, @lighter-custom-color);
    padding: unit(@gutter-width, px);
    margin-top: @baseline;
    .border-radius(@border-radius);
    display: table;
    .box-sizing(border-box);
    width: 100%;
    .lt-ie9 & { width: 660px; }
    color: @custom-color;
    .meta, .download {
      position: relative;
      display: table-cell;
      min-height: 40px * 1.2;
      height: auto !important;
      height: 40px * 1.2;
      line-height: 40px * 1.2;
    }
    .meta {
      width: 100%;
    }
    .download {
      white-space: nowrap;
    }
    .file {
      position: absolute;
    }
    .filename {
      display: inline-block;
      vertical-align: middle;
      line-height: @baseline;
      padding: 0 @normal-font-size 0 (40px + @normal-font-size);
    }
  }
}
.lt-ie8 .asset-type-documentgroup.asset-size-1 .documents li {
  .meta {
    float: left;
    width: 570px;
  }
  .file {
    display: none;
  }
  .filename {
    padding-left: 5px;
  }
}

.lt-ie8 .populr-webicon { margin-bottom: 5px; }

#populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);


@media screen and (max-width: 905px) {
  .has-sharing #pop-links {
    margin-top: @baseline / 2;
  }

  #meta {
    position: relative;
    width: auto;
    padding: unit(@gutter-width, px);
    .box-sizing(border-box);
    & .addthis_button_facebook_like {width: auto;}
    margin-top: @baseline;
    top: auto !important;
    background: fade(@custom-color, 100%);
    .border-radius(@border-radius);
  }
  #pop-sharing > a {
    display: inline-block;
    margin-left: 25px;
    vertical-align: top;
    &:first-child {
      margin-left: 0;
    }
  }
}
/* ... */

